--- a/assets/style/_reset.scss
+++ b/assets/style/_reset.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 html, body, ul, ol {
   margin:  0;
   padding: 0;
@@ -18,7 +22,6 @@ body {
   font-size: 18px;
   font-weight: 400;
   color: $black;
-  height: 100%;
 }
 
 ul, ol {
