--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -4,4 +4,14 @@
 
 .main {
   margin-top: 85px;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  min-height: calc(100vh - 85px);
+  position: relative;
+}
+
+.wrapper {
+  max-width: 1340px;
+  height: 100%;
 }
