Add page transition

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -15,3 +15,13 @@
   max-width: 1340px;
   height: 100%;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s;
+}
+.page-enter-from,
+.page-leave-to {
+  opacity: 0;
+  filter: blur(1rem);
+}
