--- a/assets/style/_reset.scss
+++ b/assets/style/_reset.scss
@@ -17,6 +17,7 @@ html {
 body {
   font-family: Montserrat, sans-serif;
   font-size: toRem(18);
+  line-height: toRem(26);
   font-weight: 400;
   color: $black;
   height: 100%;
