Add subscribe form block

--- a/assets/style/_helpers.scss
+++ b/assets/style/_helpers.scss
@@ -52,12 +52,16 @@
 	}
 }
 
-%buttonBlack {
+%button {
   padding: 10px 50px;
-  background: $black;
   border-radius: 2px;
   @include transition;
   @include font(18, 26, 400, $white);
+}
+
+%buttonBlack {
+  @extend %button;
+  background: $black;
 
   &:hover {
     background: $blue;
