--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -4,8 +4,6 @@
 
 .main {
   margin-top: 85px;
-  display: flex;
-  justify-content: center;
   height: 100%;
   min-height: calc(100vh - 85px);
   position: relative;
@@ -14,6 +12,7 @@
 .wrapper {
   max-width: 1340px;
   height: 100%;
+  margin: 0 auto;
 }
 
 .page {
