--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -16,10 +16,15 @@
 }
 
 .page {
-  margin: 30px 0 200px;
+  margin: 30px 0 80px;
   display: flex;
   flex-direction: column;
-  gap: 100px;
+  gap: 80px;
+
+  @include breakpoints(large) {
+    gap: 100px;
+    margin: 30px 0 200px;
+  }
 }
 
 // Page animation
