--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -7,6 +7,10 @@
   height: 100%;
   min-height: calc(100vh - 85px);
   position: relative;
+
+  @include breakpoints(medium) {
+    margin-top: 115px;
+  }
 }
 
 .wrapper {
@@ -16,14 +20,14 @@
 }
 
 .page {
-  margin: 30px 0 80px;
+  margin: 0 0 80px;
   display: flex;
   flex-direction: column;
   gap: 80px;
 
   @include breakpoints(large) {
     gap: 100px;
-    margin: 30px 0 200px;
+    margin: 0 0 200px;
   }
 }
 
